# aoai-simulated-api

./: .gitignore  .pylintrc  CHANGELOG.md  LICENSE.md  Makefile  README.md  pyproject.toml  sample.env  test-aoai.http  test-doc-intelligence.http  test.http
.devcontainer/: devcontainer.json  post-create.sh
docs/: config.md  developing.md  extending.md  metrics.md  (+1 more)
src/aoai-simulated-api/: .dockerignore  Dockerfile  config.py  constants.py  generator_config.py  generator_manager.py  limiters.py  main.py  pipeline.py  pyproject.toml  requirements.txt  vcr_handler.py
src/aoai-simulated-api/generator/: __init__.py  _generator_context.py  _generator_doc_intell.py  _generator_openai.py  analyze-receipt-result.json  config.py  default_config.py  manager.py
src/aoai-simulated-api/record_replay/: _hashing.py  _models.py  _persistence.py  _record_replay_handler.py  _request_forwarder.py  _request_forwarder_config.py
src/aoai-simulated-api/src/aoai_simulated_api/: app_builder.py  auth.py  config.py  config_loader.py  constants.py  latency.py  limiters.py  main.py  metrics.py  models.py  pipeline.py
src/aoai-simulated-api/src/aoai_simulated_api/generator/: __init__.py  _generator_context.py  _generator_doc_intell.py  _generator_openai.py  default_config.py  doc_intell.py  manager.py  openai.py  openai_tokens.py
src/aoai-simulated-api/src/aoai_simulated_api/record_replay/: __init__.py  _hashing.py  _models.py  _persistence.py  _record_replay_handler.py  _request_forwarder.py  _request_forwarder_config.py  handler.py  models.py  openai.py  persistence.py
(+105 files in other folders)
